--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 contourpy==1.3.2
 cycler==0.12.1
-fonttools==4.57.0
+fonttools==4.58.5
+joblib==1.5.1
 kiwisolver==1.4.8
 matplotlib==3.10.3
+mpmath==1.3.0
 numpy==2.3.1
 packaging==25.0
+pandas==2.3.1
 pillow==11.3.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+pytz==2025.2
+scikit-learn==1.7.0
+scipy==1.16.0
 six==1.17.0
-wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.2/libexec/wheel-0.45.1-py3-none-any.whl#sha256=b9235939e2096903717cb6bfc132267f8a7e46deb2ec3ef9c5e234ea301795d0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tzdata==2025.2
